# ePod

./: CMakeLists.txt  sdkconfig  sdkconfig.old  video_convert.bat
main/: CMakeLists.txt  ePod.c  idf_component.yml  jpeg.cpp  jpeg.h  lcd.c  lcd.h  sd.c
